--- a/week1/index.html
+++ b/week1/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 330 Portfolio</title>
-    <script src="js/main.js"></script>
+    <title>WDD 330 | WEEK 1</title>
 </head>
 <body>
-    <h1>Cody's Portfolio</h1>
-    <ol id="linkslist"></ol>
-
-
-    <script> loadIndex(); </script>
+    <h1>WEEK 1 NOTES</h1>
 </body>
 </html>
