--- a/week1/index.html
+++ b/week1/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>WEEK 1 NOTES</h1>
-    <img src="images/w1notes.png" alt = "notes">
+    <img src="week1/images" alt = "notes">
 </body>
 </html>
