--- a/week1/index.html
+++ b/week1/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>WEEK 1 NOTES</h1>
-    <img src="/week1/images/w1notes.png" alt = "notes">
+    <img src="week1/images/w1notes.png" alt = "notes">
 </body>
 </html>
