--- a/week1/index.html
+++ b/week1/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>WEEK 1 NOTES</h1>
     <img src="week1/images/w1notes.png" alt = "notes">
+    <img src="images/IMG_2286.jpg" alt = "test">
 </body>
 </html>
