--- a/week1/index.html
+++ b/week1/index.html
@@ -11,5 +11,6 @@
     <h1>WEEK 1 NOTES</h1>
     <img src="./images/w1notes.png" alt = "notes">
     <img src="./images/IMG_2286.jpg" alt = "test">
+    <p> hello </p>
 </body>
 </html>
