--- a/week1/index.html
+++ b/week1/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>WEEK 1 NOTES</h1>
-    <img src="../images/w1notes.png" alt = "notes">
+    <img src="images/w1notes.png" alt = "notes">
     <p> hello </p>
 </body>
 </html>
