--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 330 Portfolio</title>
     <script src="js/main.js"></script>
-</head>
+    <link rel="stylesheet" href="css/mainstyle.css" />
+  </head>
 
-<body>
-    <h1>Cody's Portfolio</h1>
-    <ol id="linkslist"></ol>
-
-
-    <script> loadIndex(); </script>
-</body>
+  <body>
+    <main>
+      <h1>Cody's Portfolio</h1>
+      <div class="contents">
+      <ol id="linkslist"></ol>
+      </div>
+    </main>
+    <script>
+      loadIndex();
+    </script>
+  </body>
 </html>
