--- a/week2/index.html
+++ b/week2/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 2 Notes</title>
 </head>
+
 <body>
-    
+    <main>
+        <h1>WEEK 2 NOTES</h1>
+        <ul>
+            <li> Two types of comments in JS ---> "//" for short comments | "/* */" for long comments </li>
+            <li> Writing comments are good practice in your code.</li>
+            <li> it’s considered best practice to combine the two and write each statement on a new line, terminated by a semi-colon</li>
+            <li>Javascript has 7 different data types</li>
+            <li>Variables are used in programming languages to refer to a value stored in memory.</li>
+            <li>Variables have to be declared before can be used.</li>
+            <li> --- CONST -> use when the variable will not be reassigned ton another value.</li>        
+            <li> --- LET   -> use if the variable might be reassigned later in the program</li>
+            <li> "SCOPE" Using const and let to declare variables means they are block scoped, so their value ONLY EXISTS INSIDE THE BLOCK THEY ARE DECLARED IN</li>
+            <li>  -Scope is an important concept in programming. It refers to where a constant or variable is accessible by the program. There are two common scopes that are often referred to in programs: global scope and local scope.</li>
+        <li>Template literals are a special types of string that were introduced in ES6. Template literals use the backtick character, `, to deliminate the string</li>
+        <li> -- They also allow interpolation of JavaScript code. This means that a JavaScript expression can be inserted inside a string and the result will be displayed</li>
+        <li> ---- CONST name = `Siri` ;     `Hello ${ name  }!`;    ------ > 'Hello Siri!'</li>
+        <br>
+        <li>FUNCTION ---- "function hello(){    console.log('Hello World!');"</li>
+        <li>To invoke a function, simply enter its name followed by parentheses.</li>
+        <li>-- all functions return a value, which can be specified using the return statement, which comes after the "RETURN" keyword. A function that doesn't explicitly return anything will return "UNDEFINED"</li>
+    </ul>
+    </main>
 </body>
+
 </html>
