does this do it?

--- a/week5/todolist.html
+++ b/week5/todolist.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO LIST</title>
-    <link rel="stylesheet" href="week5/liststyle.css">
+    <link rel="stylesheet" href="../week5/liststyle.css">
     
 </head>
 
@@ -21,6 +21,6 @@
     </ul>
     </div>
 </body>
-<script src="week5/list.js"></script>
+<script src="../week5/list.js"></script>
 
 </html>
