--- a/week8/teamact08.html
+++ b/week8/teamact08.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/teamjava.js"></script>
-    <link rel="stylesheet" href="css/teamstyle.css"/>
+
+    <link rel="stylesheet" href="css/teamstyle.css" />
 </head>
+
 <body>
-    <div class="cards"></div>
+
+    <div class="cards" id="peopleList"></div>
+
+    <div id="detailsbox" class="hidden details">
+        <dl>
+            <dt>Name:</dt>
+            <dd class="name" id="name"></dd>
+
+            <dt>Birth Year:</dt>
+            <dd class="birthYear" id="birthYear"></dd>
+
+            <dt>Height:</dt>
+            <dd class="height" id="height"></dd>
+
+            <dt>Mass:</dt>
+            <dd class="mass" id="mass"></dd>
+
+            <dt>Hair Color:</dt>
+            <dd class="hairColor" id="hairColor"></dd>
+
+            <dt>Skin Color:</dt>
+            <dd class="skinColor" id="skinColor"></dd>
+
+            <dt>Gender:</dt>
+            <dd class="gender" id="gender"></dd>
+
+        </dl>
+    </div>
+
+    <div class="pagination">
+        <a id="prev" href="#">&lt;-Prev</a> <a id="next" href="#">Next -&gt;</a>
+    </div>
+    <script src="js/teamjava.js"></script>
 </body>
+
 </html>
