--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <main>
-        <button id="showrandomcar">random</button>
+        <h1>Cody's Hotwheels Collection</h1>
+        <div id="title">Can't decide which to pick?</div>
+        <button id="showrandomcar">Randomizer</button>
         <div id="randomcar">
         <div>
         <p id="model"></p>
@@ -26,12 +28,15 @@
         </div>
         
         <br>
+<!-- test for cleaner list-->
 
-        <button id="showcarlist">Show Cars</button>
+   
+    <div class="cards" id="hwcarList"></div>
 
-        <div>
-            <div id="table"></div>
-        </div>
+    
+
+
+
     </main>
     <script src="js/hotwheels.js" defer="defer"></script>
 </body>
