show and hide lists

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -30,7 +30,7 @@
         <br>
 <!-- test for cleaner list-->
 
-   
+<button id="listbutton">Show Collection</button>
     <div class="cards" id="hwcarList"></div>
 
     
