--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -38,6 +38,9 @@
     
     </main>
     <script src="js/hotwheels.js" defer="defer"></script>
+    <footer>
+        &copy; <span id="copyrightyear"></span> | CODY THOMAS
+              </footer>
 </body>
 
 
