--- a/week3/index.html
+++ b/week3/index.html
@@ -22,6 +22,7 @@
         console.log(makeUser);
     </script>
     <title>WDD 330 | WEEK 1</title>
+    <link rel="stylesheet" href="../css/mainstyle.css">
 </head>
 
 <body>
