--- a/week5/index.html
+++ b/week5/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>WDD 330 | WEEK 5</title>
+    <link rel="stylesheet" href="../css/mainstyle.css">
 </head>
 
 <body>
